--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "author": "Matt Hinz <matthinz@gmail.com>",
   "private": true,
   "devDependencies": {
+    "@types/nodemailer": "^6.4.6",
     "prettier": "2.8.0",
-    "serve": "^14.1.2"
+    "serve": "^14.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "nodemailer": "^6.8.0"
   }
 }
