--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "devDependencies": {
     "@types/nodemailer": "^6.4.6",
+    "chokidar-cli": "^3.0.0",
     "prettier": "2.8.0",
     "serve": "^14.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "juice": "^8.1.0",
     "nodemailer": "^6.8.0"
   }
 }
