--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.1266.0",
+    "dotenv": "^16.0.3",
     "juice": "^8.1.0",
     "nodemailer": "^6.8.0"
   }
